# Model_Metrics

./: .gitignore  API-Integration-Guide.md  LLM Benchmark Dashboard (standalone).html  LLM Benchmark Dashboard.dc.html  README.md  site.webmanifest
backend/: pyproject.toml
backend/app/: data.py  main.py  schemas.py
backend/app/routers/: benchmarks.py
backend/tests/: test_benchmarks.py
docs/: API-Integration-Guide.md
